# my-smart-project

./: .gitignore  AGENTS.md  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: tests.yml
docs/: BRANCH_HYGIENE_PLAN.md  DEVELOPMENT_GUIDE.md  POST_3N_STABILIZATION_DECISION.md  PROJECT_PLAN.md  SECURITY.md  STRATEGIC_STABILIZATION_AUDIT.md
src/: main.py
src/my_smart_project/: __init__.py  cli.py  content_workspace.py  models.py
tests/: test_main.py
