[project]
name = "my-smart-project"
version = "0.1.0"
description = "A local Python CLI for safe video production project records."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/saeidalsaloum/my-smart-project"

[tool.codex]
status = "content-command-center-v1"
standard_library_only = true
